Fix TW logo overflowing map pool image

--- a/app/styles/tournament-map-pool.css
+++ b/app/styles/tournament-map-pool.css
@@ -40,7 +40,7 @@
 .map-pool__mode-images-container {
   position: absolute;
   display: flex;
-  padding: var(--s-1);
+  padding: var(--s-1-5);
   backdrop-filter: blur(5px) grayscale(25%);
   border-end-end-radius: var(--rounded);
   border-start-start-radius: var(--rounded);
